Fix for align-right and .sidebar2 layouts being placed wider than the width of the viewport

--- a/wp-content/themes/wisconsinwatch/less/legacy-css.less
+++ b/wp-content/themes/wisconsinwatch/less/legacy-css.less
@@ -127,39 +127,6 @@ body.normal.page .hero {
 .single-post article.post .sep {
   display: none;
 }
-.single-post .sidebar2 {
-  float: right;
-  margin: 6px -15% 12px 20px;
-  max-width: 200px;
-}
-.single-post .sidebar2 .item {
-  margin-bottom: 24px;
-}
-.single-post .sidebar2 h5 {
-  color: #999;
-  text-transform: uppercase;
-  margin-bottom: 4px;
-  font-size: 15px;
-}
-.single-post .sidebar2 img.alignleft {
-  margin-left: 0;
-}
-.single-post .sidebar2 img.alignright {
-  margin-right: 0;
-}
-.single-post .sidebar2 h3 {
-  font-size: 21px;
-  margin-bottom: 4px;
-}
-.single-post .sidebar2 p {
-  font-size: 15px;
-  margin-bottom: 8px;
-}
-.single-post .sidebar2 ul li,
-.single-post .sidebar2 ol li {
-  font-size: 15px;
-  margin-bottom: 6px;
-}
 .single-post h2.subtitle {
   font-size: 21px;
   font-weight: normal;
@@ -583,7 +550,7 @@ article img.attachment-post-thumbnail {
   /* #sticky-nav .nav-shelf .site-name { display: none; } */
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 980px) {
   .single-post .entry-content .alignright,
   .single-post .entry-content .align-right,
   .single-post .entry-content .right {
@@ -663,10 +630,6 @@ article img.attachment-post-thumbnail {
     width: 100%;
     float: none;
     clear: both;
-  }
-  .single-post .sidebar2 {
-    margin-right: 0;
-    max-width: 40%;
   }
   h1.entry-title {
     font-size: 38px;
@@ -792,27 +755,6 @@ article img.attachment-post-thumbnail {
     float: left;
     text-align: left;
   }
-  .single-post .sidebar2 {
-    max-width: 100%;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    margin: 10px 0;
-    padding: 24px 0 12px 0;
-  }
-  .single-post .sidebar2 .item {
-    margin: 0 0 12px 0;
-  }
-  .single-post .sidebar2 .item h3 {
-    font-size: 16px;
-  }
-  .single-post .entry-content .module.image {
-    max-width: 100%;
-    float: none;
-    margin: 10px 0;
-    padding: 12px 0;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-  }
 
   .largo-related-posts .related h4 {
     font-size: 22px;
@@ -821,11 +763,5 @@ article img.attachment-post-thumbnail {
   }
   .largo-related-posts .related .byline {
     clear: both;
-  }
-}
-
-@media print {
-  .single-post .sidebar2 {
-    display: none
   }
 }
